--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   http: ^0.13.5
   flutter_colorpicker: ^1.0.3
+  html: ^0.15.2
 
 dev_dependencies:
   flutter_test:
